# neural

./: CMakeLists.txt  README.md  TODO.md
examples/and/: main.c
examples/iris/: iris.h  main.c
examples/matmul/: main.c
examples/one_hot/: main.c
examples/or/: main.c
examples/square/: main.c
examples/xor/: main.c
include/: activation.h  check.h  dataset.h  functions.h  initialization.h  layer.h  loss.h  matrix.h  network.h  neural.h  operations.h  optimizer.h  random.h  vector.h
src/: activation.c  dataset.c  functions.c  initialization.c  layer.c  loss.c  matrix.c  network.c  operations.c  vector.c
test/: activation.c  comparison.h  dataset.c  layer.c  loss.c  matrix.c  network.c  operations.c  vector.c
